# MathEngine

./: .gitignore  CMakeLists.txt  README.md  tester.cpp
lib/include/: Algorithm.hpp  Calculate.hpp  CalculationResult.hpp  Formatter.hpp  Function.hpp  MathEngine.hpp  Operator.hpp  Tokenizer.hpp
lib/src/: Algorithm.cpp  Calculate.cpp  Formatter.cpp  MathEngine.cpp  Tokenizer.cpp
tests/: CMakeLists.txt  tester.cpp
